--- a/css/my-style.css
+++ b/css/my-style.css
@@ -24,7 +24,6 @@ body {
   line-height: 1.4;
   font-family: Lato, monospace;
   position: relative;
-  background-color: var(--overlay-color);
 }
 
 header {
@@ -35,6 +34,7 @@ header {
   width: 100%;
   background-color: #fff;
   z-index: 99;
+  box-shadow: 0px 0px 5px 5px rgba(0,0,0,.15);
 }
 
 div.mobile-menu {
@@ -77,7 +77,6 @@ div.logo img {
   width: 60px;
   height: 60px;
   padding: 1rem;
-  /* background: var(--primary-color); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -87,7 +86,6 @@ div.logo img {
   position: relative;
   width: 100%;
   height: 2px;
-  /* background-color: #fff; */
   background-color:var(--primary-color);
   display: flex;
   align-items: center;
@@ -203,8 +201,6 @@ div.logo img {
 /* Landing section styling */
 
 div.landing {
-  /* height: 70vh; */
-  /* background-image: url("../assets/images/illustrated-bg.jpg"); */
   margin-top: 60px;
   background-position: center;
   background-repeat: no-repeat;
@@ -225,13 +221,14 @@ div.landing div.section > div {
   
 }
 
+/* Styling the h1 tag */
 div.message h1 {
-  /* font-weight: 700; */
   font-size: 30px;
   text-align: center;
   margin: 30px 0 10px 0;
 }
 
+/* Styling the p tag */
 div.message p {
   font-size: 16px;
   line-height: 1.6;
@@ -239,14 +236,9 @@ div.message p {
   color: rgba(255,255,255,.8);
 }
 
+/* Styling the a tag */
 div.message a {
   margin: 15px 0 15px 0;
-  /* text-decoration: none;
-  height: 50px;
-  width: 170px;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly; */
 }
 
 div.landing__hero {
@@ -255,7 +247,6 @@ div.landing__hero {
 
 div.landing__hero img {
   max-width: 100%;
-  /* display: block; */
   z-index: 1;
 }
 
@@ -271,7 +262,7 @@ div.landing__hero::after {
 }
 
 
-/* Button component */
+/* Button component which will be applied to all the button elements used on this website */
 .button-component {
   border-radius: 10px;
   padding: 10px;
@@ -381,18 +372,6 @@ div.footer__social_media ul {
   border-radius: 50%;
 }
 
-/* .fa-facebook {
-  color: var(--facebook-color);
-}
-
-.fa-instagram {
-  color: var(--instagram-color);
-}
-
-.fa-reddit {
-  color: var(--reddit-color);
-} */
-
 div.footer__social_media ul {
   display: flex;
 }
@@ -413,4 +392,28 @@ div.footer__contact_details ul {
 
 div.footer__contact_details ul li a {
   color: var(--facebook-color);
+}
+
+/* About page styling */
+
+div.about_dun_laoghaire {
+  background-color: #fff;
+  color: var(--footer-color);
+  text-align: left;
+  padding: 10px;
+  line-height: 1.6;
+}
+
+div.about_dun_laoghaire div.section h2 {
+  color: rgba(45,171,202,1);
+}
+
+div.about_dun_laoghaire div.section p {
+  padding-bottom: 20px;
+}
+
+div.about_dun_laoghaire div.section h3 {
+  font-weight: bold;
+  /* color: rgba(45,171,202,1); */
+  padding-bottom: 10px;
 }
