--- a/css/my-style.css
+++ b/css/my-style.css
@@ -27,7 +27,7 @@ body {
 }
 
 header {
-  height: 12vh;
+  height: 11vh;
   position: fixed;
   top: 0;
   left: 0;
@@ -198,6 +198,11 @@ div.logo img {
   padding-right: 5px;
 }
 
+div.section {
+  width: 90%;
+  margin: 0 auto;
+}
+
 /* Landing section styling */
 
 div.landing {
@@ -209,10 +214,11 @@ div.landing {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: var(--primary-color);
 }
 div.landing div.section > div {
   color: var(--message-color);
-  background-color: var(--primary-color);
+  background-color: inherit;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -298,7 +304,6 @@ div.cards {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  align-items: center;
 }
 
 div.cards__card {
@@ -307,7 +312,7 @@ div.cards__card {
   align-items: center;
   width: 280px;
   background-color: white;
-  margin-bottom: 15px;
+  margin: 15px;
 }
 
 div.cards__card img {
@@ -416,4 +421,30 @@ div.about_dun_laoghaire div.section h3 {
   font-weight: bold;
   /* color: rgba(45,171,202,1); */
   padding-bottom: 10px;
+}
+
+/* Contact form styles */
+
+div.contact-form > div {
+  margin: 0 auto;
+}
+
+div.contact-form  div.section form {
+  margin: 20px auto;
+}
+
+div.contact-form h2 {
+  color: var(--primary-color);
+}
+
+div.section form input,
+div.section form textarea  {
+  width: 100%;
+  margin-bottom: 20px;
+  border: none;
+  border-bottom: 1px solid var(--primary-color);
+}
+
+div.section form input[type="submit"] {
+ background-color: var(--primary-color);
 }
